--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -14,8 +14,8 @@
         android:layout_gravity="center_horizontal|top" />
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="502dp"
+        android:layout_width="match_parent"
+        android:layout_height="478dp"
         android:id="@+id/friend_listView"
         android:layout_gravity="center_horizontal|bottom" />
 </FrameLayout>
