--- a/app/src/main/res/layout/fragment_chatt_room.xml
+++ b/app/src/main/res/layout/fragment_chatt_room.xml
@@ -3,8 +3,18 @@
     android:layout_height="match_parent"
     tools:context="com.example.sangsu.kaokaotalk_sample.ChattRoomFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:hint="채팅방 이름, 참여자 검색"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal|top" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="470dp"
+        android:id="@+id/room_listView"
+        android:layout_gravity="center_horizontal|bottom" />
 
 </FrameLayout>
